--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 			<form>
 	                <button id="buttonone" formaction="regis.html" > Join us Today </button>
 			
-		        <button id="buttontwo" formaction="Membership.html" > Membership </button> 
+		        <button id="buttontwo" formaction="membership.html" > Membership </button> 
 			
 		        </form>
 		</div>
